--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "modbus-serial": "^8.0.23"
   },
   "name": "html",
   "version": "1.0.0",
